--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         </ul>
       </nav>
 
-      <a href="./gallery.html" class="header__logo" id="top-anchor"><img src="./assets/icons/devabit-logo.svg" alt="Logotype"></a>
+      <a href="./gallery.html" class="header__logo" id="top-anchor">
+        <img src="./assets/icons/devabit-logo.svg" alt="Logotype">
+      </a>
 
       <div class="header__social-plus-menu">
         <span class="header__follow">Follow us</span>
